Version: 1.21.0
Date: 2023-08-11

  Changes:
    - Refactor default autoplace
    - Fix sunker_colony to sunken_colony
    - Prefix all entities for better compatiblity.
    - use new ERM mod registration system
    - Added team color settings when HD package is installed
    - Normalize distance_per_frame to 0.2 / 0.5 for units

---------------------------------------------------------------------------------------------------
Version: 1.20.5
Date: 2023-08-03

  Changes:
    - increased unit cost for custom attacks groups.
    - adjusted spawn chance and units for dropship and carrier
    - Map color is now changeable in startup setting.
    - K2 Creep can be toggled off.

---------------------------------------------------------------------------------------------------
Version: 1.20.4
Date: 2023-07-30

  Changes:
    - Removed an unintentional unit spawn when zergling dies.

---------------------------------------------------------------------------------------------------
Version: 1.20.3
Date: 2023-07-30

  Bugfixes:
    - Remove a non-debug print function.

---------------------------------------------------------------------------------------------------
Version: 1.20.2
Date: 2023-07-28

  Bugfixes:
    - Fix a crash where an icon is linking to invalid path.

---------------------------------------------------------------------------------------------------
Version: 1.20.1
Date: 2023-07-28

  Bugfixes:
    - Fix a crash where an icon is linking to the one in erm_terran.

---------------------------------------------------------------------------------------------------
Version: 1.20.0
Date: 2023-07-26

  Features:
    - Worked with Shinzou to integrate the HD graphic pack  and some of  its features.
    - ERM 1.18 Compatibility Changes
    - Updated unit for dynamic attack range and dynamic vision distance
    - Added Infested Command Centre, have higher chance to spawn suicidal units.
    - Added Broodling, spawn from queen. 80 DPS @ L20