@@ -51,7 +51,7 @@ local incremental_acid_damage = 25
 local base_attack_speed = 120
 local incremental_attack_speed = 60
 
-local attack_range = 30
+local attack_range = ERM_Config.get_max_attack_range() + 16
 local attack_shortrange = ERM_Config.get_max_attack_range()
 
 -- Animation Settings
