@@ -9,6 +9,8 @@ Date: 2023-08-11
     - use new ERM mod registration system
     - Added team color settings when HD package is installed
     - Normalize distance_per_frame to 0.2 / 0.5 for units
+    - Turret range is now max range config + 16
+    - Scourge explosion damage change from 250 -> 200, radius 2 -> 3
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.20.5
